# Monster-Slayer

./: .gitignore  CMakeLists.txt  README.md  bossStats.txt  items.txt  monsterscaling.txt
header/: game.h  item.h  monster.h  player.h
src/: game.cpp  item.cpp  main.cpp  monster.cpp  player.cpp
tests/: test.cpp
